# RAIG-Testbed

./: .gitignore  CMakeLists.txt  README.md  build_ninja.sh
docs/: RAIG-Development-&-Certification-Lifecycle-V1.0-EN.md  RAIG-Testbed-Auto-Test-Suite-V1.0-EN.md  RAIG-Testbed-Compliance-Matrix-V1.0-EN.md  RAIG-Testbed-Design-V1.0-EN.md  RAIG-Testbed-Implementation-V1.0-EN.md  RAIG-Testbed-Integration-V1.0-EN.md  RAIG-Testbed-Run-Log-V1.0.md  RAIG-Testbed-Specification-V1.0-EN.md  RAIG-Testbed-Static-Analysis-V1.0-EN.md  RAIG-Testbed-Theoretical-Validation-V1.0-EN.md
include/genesis_core/: genesis_core.hpp  structural_state_internal.hpp
include/runtime/: runtime_supervisor.hpp
include/telemetry/: telemetry_emitter.hpp
include/world/: world_interface.hpp
src/: main.cpp
src/genesis_core/: evolution_operator.cpp  genesis_core.cpp
src/runtime/: pacing.cpp  runtime_supervisor.cpp  termination.cpp
src/telemetry/: serializers.cpp  telemetry_emitter.cpp
src/world/: stimulus_generators.cpp  world_interface.cpp
tests/: raig_tests.cpp
